--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ body {
 }
   
 .container {
-    width: 600px;
+    width: 90%;
+    max-width: 600px;
     margin: auto;
     font-size: 25px;
     background-color: blue;
@@ -33,7 +34,7 @@ body {
   
   
 #name, #email,#number, #dropdown {
-    width: 600px;
+    width: 100%;
     min-height: 35px;
     border-radius: 5px;
     border: none;
@@ -52,15 +53,15 @@ body {
   
 #textarea {
     display: block;
-    width: 600px;
+    width: 100%;
     height: 100px;
     font-size: 20px;
     margin-bottom: 50px;
 }
   
 #submit {
-    background-image: linear-gradient(to right,#040404, #000000, #656565);
+    background-color: black;
     color: white;
-    width: 600px;
+    width: 100%;
     height: 50px;
 }
